// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Badge Border 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <span
      class="badge outline svelte-zsk4sa"
    >
      Badge
    </span>
  </div>
</section>
`;

exports[`Storyshots Components/Badge Theme 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    style=""
  >
    <span
      class="badge dark svelte-zsk4sa"
    >
      Badge
    </span>
  </div>
</section>
`;

exports[`Storyshots Components/Button Custom Example 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    style="--szot-color:#ffc7a7;--szot-background-color:#FC6627;--szot-border: 2px solid #ffc7a7; --szot-border-radius: 1.5rem"
  >
    <button
      class="button medium button-style-primary border-filled svelte-1k6va50"
      name="button"
      type="button"
    >
      orange
    </button>
  </div>
</section>
`;

exports[`Storyshots Components/Button Disabled 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <button
      class="button large button-style-primary border-filled svelte-1k6va50 disabled"
      disabled=""
      name="button"
      type="button"
    >
      Bloquear
    </button>
  </div>
</section>
`;

exports[`Storyshots Components/Button Floating 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    style=""
  >
    <button
      class="button floating button-style-primary border-filled svelte-1k6va50"
      name="button"
      type="button"
    >
      <div
        class="icon svelte-1k6va50"
      >
        <span
          class="icon-dots-horizontal"
        />
      </div>
    </button>
  </div>
</section>
`;

exports[`Storyshots Components/Button Floating Disabled 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <button
      class="button floating button-style-primary border-filled svelte-1k6va50 disabled"
      disabled=""
      name="button"
      type="button"
    >
      <div
        class="icon svelte-1k6va50"
      >
        <span
          class="icon-dots-horizontal"
        />
      </div>
    </button>
  </div>
</section>
`;

exports[`Storyshots Components/Button Floating Not Background 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <button
      class="button floating button-style-primary border-not-filled svelte-1k6va50"
      name="button"
      type="button"
    >
      <div
        class="icon svelte-1k6va50"
      >
        <span
          class="icon-dots-horizontal"
        />
      </div>
    </button>
  </div>
</section>
`;

exports[`Storyshots Components/Button Large Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <button
      class="button large button-style-primary border-filled svelte-1k6va50"
      name="button"
      type="button"
    >
      <div
        class="icon-right svelte-1k6va50"
      >
        <span
          class="icon-upload"
        />
      </div>
       
      <div
        class="texto-right svelte-1k6va50"
      >
        Enviar documentos
      </div>
    </button>
  </div>
</section>
`;

exports[`Storyshots Components/Button Large Simple 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <button
      class="button large button-style-primary border-filled svelte-1k6va50"
      name="button"
      type="button"
    >
      Minhas contas
    </button>
  </div>
</section>
`;

exports[`Storyshots Components/Button Medium Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <button
      class="button medium button-style-primary border-filled svelte-1k6va50"
      name="button"
      type="button"
    >
      <div
        class="icon-right svelte-1k6va50"
      >
        <span
          class="icon-file"
        />
      </div>
       
      <div
        class="texto-right svelte-1k6va50"
      >
        Documento
      </div>
    </button>
  </div>
</section>
`;

exports[`Storyshots Components/Button Medium Simple 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <button
      class="button medium button-style-primary border-filled svelte-1k6va50"
      name="button"
      type="button"
    >
      Botão 1
    </button>
  </div>
</section>
`;

exports[`Storyshots Components/Button Not Background 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <button
      class="button large button-style-primary border-not-filled svelte-1k6va50"
      name="button"
      type="button"
    >
      Bloquear
    </button>
  </div>
</section>
`;

exports[`Storyshots Components/Button Not Background Disabled 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <button
      class="button large button-style-primary border-not-filled svelte-1k6va50 disabled"
      disabled=""
      name="button"
      type="button"
    >
      Bloquear
    </button>
  </div>
</section>
`;

exports[`Storyshots Components/Button Small Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <button
      class="button small button-style-primary border-filled svelte-1k6va50"
      name="button"
      type="button"
    >
      <div
        class="icon-left svelte-1k6va50"
      >
        <span
          class="icon-magnify"
        />
      </div>
       
      <div
        class="texto-left svelte-1k6va50"
      >
        Buscar
      </div>
    </button>
  </div>
</section>
`;

exports[`Storyshots Components/Button Small Simple 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <button
      class="button small button-style-primary border-filled svelte-1k6va50"
      name="button"
      type="button"
    >
      Buscar
    </button>
  </div>
</section>
`;

exports[`Storyshots Components/Button Theme Test 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    style=""
  >
    <button
      class="button medium button-style-secondary border-filled svelte-1k6va50"
      name="button"
      type="button"
    >
      Botão 1
    </button>
  </div>
</section>
`;

exports[`Storyshots Components/Button With Borders 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <button
      class="button medium button-style-primary border-outline svelte-1k6va50"
      name="button"
      type="button"
    >
      Bloquear
    </button>
  </div>
</section>
`;

exports[`Storyshots Components/Button With Borders Disabled 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <button
      class="button medium button-style-primary border-outline svelte-1k6va50 disabled"
      disabled=""
      name="button"
      type="button"
    >
      Bloquear
    </button>
  </div>
</section>
`;

exports[`Storyshots External/SveltePdfViewer Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <h1
    class="svelte-zftq3x"
  >
    Component package example.
  </h1>
   
  <br
    class="svelte-zftq3x"
  />
  <br
    class="svelte-zftq3x"
  />
   
  <h2
    class="svelte-zftq3x"
  >
    This component show your name from props:
  </h2>
   
  <p
    class="svelte-zftq3x"
  >
    Hi 
    
  </p>
   
  <br
    class="svelte-zftq3x"
  />
  <hr
    class="svelte-zftq3x"
  />
  <br
    class="svelte-zftq3x"
  />
   
  <h2
    class="svelte-zftq3x"
  >
    Use 2 internal componentes:
  </h2>
   
  <p
    class="svelte-zftq3x"
  >
    a 
    <button
      class="button medium button-style-primary border-filled svelte-1k6va50"
      name="button"
      type="button"
    >
      Button
    </button>
  </p>
   
  <br
    class="svelte-zftq3x"
  />
   
  <p
    class="svelte-zftq3x"
  >
    and an icon
  
    <span
      class="icon-email-outline"
    />
  </p>
   
  <br
    class="svelte-zftq3x"
  />
  <hr
    class="svelte-zftq3x"
  />
  <br
    class="svelte-zftq3x"
  />
   
  <h2
    class="svelte-zftq3x"
  >
    And import an image too:
    <br
      class="svelte-zftq3x"
    />
     
    <img
      alt="my-img"
      class="svelte-zftq3x"
      height="150px"
      width="150px"
    />
    <br
      class="svelte-zftq3x"
    />
  </h2>
</section>
`;

exports[`Storyshots Internal/Icon Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <span
    class="icon-phone"
  />
</section>
`;
